generated/checkers/refine/KN-Buffer-Overflow-0f8ca019-4/build_logs/syntax-repair-refine-1-0/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:604:7: error: redefinition of ‘class {anonymous}::SAGenTestChecker’
  604 | class SAGenTestChecker : public Checker<check::ASTCodeBody> {
      |       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:343:7: note: previous definition of ‘class {anonymous}::SAGenTestChecker’
  343 | class SAGenTestChecker : public Checker<check::ASTCodeBody> {
      |       ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:382:13: warning: ‘bool {anonymous}::containsDeclRefToVar(const clang::Expr*, const clang::VarDecl*)’ defined but not used [-Wunused-function]
  382 | static bool containsDeclRefToVar(const Expr *E, const VarDecl *V) {
      |             ^~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
